force-app/main/default/objects/Leave_Application__c/fields/Current_Leave_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Leave_Balance__c</fullName>
    <description>Current Leave Balance</description>
    <formula>Employee_Name__r.Current_Leave_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Leave Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>