force-app/main/default/objects/Leave_Application__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of Leave</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>