force-app/main/default/objects/Leave_Application__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of employee</description>
    <label>Employee Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leave_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>