force-app/main/default/objects/Leave_Application__c/fields/Leave_Balance_after_Approval__c.field-meta.xml
<CustomField>
    <fullName>Leave_Balance_after_Approval__c</fullName>
    <description>Gets the leave balance the employee will have after the leave is approved</description>
    <formula>Employee_Name__r.Current_Leave_Balance__c - Number_of_Days__c</formula>
    <label>Leave Balance after Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>