force-app/main/default/objects/Leave_Application__c/validationRules/Check_Leave_Balance.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Leave_Balance</fullName>
    <active>true</active>
    <errorConditionFormula>(Employee_Name__r.Current_Leave_Balance__c  -  Number_of_Days__c) &lt; 0</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Leave Balance Cannot go below 0</errorMessage>
</ValidationRule>