force-app/main/default/objects/Leave_Application__c/validationRules/End_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Check</fullName>
    <active>true</active>
    <description>Checking if End Date is greater than start date</description>
    <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be less than Start Date.</errorMessage>
</ValidationRule>