force-app/main/default/objects/Leave_Application__c/validationRules/Leave_Duration_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_Duration_Check</fullName>
    <active>true</active>
    <description>Checking if leave is more than 3 weeks</description>
    <errorConditionFormula>End_Date__c - Start_Date__c &gt; 21</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Leaves cannot be taken for more than 3 weeks in a row.</errorMessage>
</ValidationRule>