force-app/main/default/objects/Leave_Application__c/validationRules/Start_Date_Validations.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Validations</fullName>
    <active>true</active>
    <description>To check if start date is in future</description>
    <errorConditionFormula>Start_Date__c &lt;=  TODAY()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date cannot be in the past.</errorMessage>
</ValidationRule>